# Automated-Coffee-Machine

./: Dockerfile.tests  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: test_matrix.yml
tests/: beverage_test.py  setup.py  stock_test.py
